<resources>
    <string name="app_name">Pomiary hałasu</string>
    <string name="greeting_text">Witaj!</string>
    <string name="email_input">e-mail</string>
    <string name="pwd_input">hasło</string>
    <string name="login_button_label">Zaloguj się</string>
    <string name="no_account_text">Nie masz konta?</string>
    <string name="register_hyperlink">Zarejestruj się!</string>

    <string name="register_header">Zarejestruj się</string>
    <string name="create_account_button_label">Załóż konto</string>
    <string name="bottommenu_record">Nagraj</string>
    <string name="bottommenu_help">Pomoc</string>
    <string name="bottommenu_norms">Normy</string>
    <string name="bottommenu_history">Historia</string>
    <string name="microphone_image_description">Obrazek mikrofonu</string>

    <string name="preference_file_key">SharedPreferences</string>
    <string name="preference_value_use_default_probe">UseDefaultProbe</string>
    <string name="preference_value_use_custom_probe">UseCustomProbe</string>
    <string name="preference_key_choosen_probe">ChoosenProbe</string>

<!--    <string name="chooseprobe_header">Jakiej próbki odniesienia chcesz użyć do pomiarów?</string>-->
<!--    <string name="chooseprobe_predefinedprobe_text">Próbka \npredefiniowana</string>-->
<!--    <string name="chooseprobe_customprobe_text">Nagraj własną \npróbkę</string>-->
<!--    <string name="chooseprobe_recomendedoption_text">*Zalecana</string>-->
<!--    <string name="chooseprobe_infodescription_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do-->
<!--        eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis lectus nulla at volutpat diam ut. Neque ornare-->
<!--        aenean euismod elementum nisi quis. Vitae turpis massa sed elementum. Arcu dictum varius duis at consectetur-->
<!--        lorem donec massa. Vitae tempus quam pellentesque nec nam aliquam sem. Suspendisse potenti nullam ac tortor-->
<!--        vitae purus faucibus ornare. Mi ipsum faucibus vitae aliquet nec ullamcorper sit. Nunc sed velit dignissim-->
<!--        sodales ut eu. In hendrerit gravida rutrum quisque. Natoque penatibus et magnis dis. Et malesuada fames ac-->
<!--        turpis egestas maecenas pharetra convallis. Amet risus nullam eget felis eget. Vulputate sapien nec sagittis-->
<!--        aliquam malesuada.</string>-->
<!--    <string name="chooseprobe_infobutton_label">info</string>-->

    <string name="success">Sukces!</string>
    <string name="probe_registered">Próbka została poprawnie zarejestrowana</string>
    <string name="probe_registereddesc">Szczegółowe informacje dotyczące pomiaru znajdziesz w archiwum</string>


    <string name="archive_fragment_header">Historia pomiarów</string>

    <string name="archive_emptylist_text">Nie masz zarejestrowanych historycznych pomiarów</string>

    <string name="archive_table_dateheader">Data</string>
    <string name="archive_table_resultheader">Wynik</string>

    <string name="probedetails_place">Miejsce</string>
    <string name="probedetails_standard">Standardy</string>
    <string name="probedetails_comment">Komentarz</string>
    <string name="probedetails_location">Lokacja</string>

    <string name="initrecordprobe_header">Nagrywanie dźwięku</string>
    <string name="initrecordprobe_1st_step">1. Aby nagrać próbkę dźwięku, wybierz standard wg. którego ma zostać zbadana</string>

    <string name="customprobe_header">Nagrywanie dźwięku</string>
    <string name="customprobe_stepsheader">Aby nagrać próbkę:</string>
    <string name="customprobe_step1">Wciśnij poniższy przycisk i odczekaj 10 sekund - po tym czasie nagrywanie zostanie zakończone, telefon zawibruje i wydobędzie się z niego sygnał dźwiękowy, informujący o zakończeniu nagrywania</string>
    <string name="customprobe_recording">*Nagrywanie*</string>

    <string name="customprobefailure_text">Błąd!</string>
    <string name="customprobefailure_label">Nie udało się zarejestrować próbki</string>

    <string name="continuebutton_text">Dalej</string>
    <string name="initstandardsdiscovery_law">Prawne</string>
    <string name="initstandardsdiscovery_scientific">Naukowe</string>
    <string name="initstandardsdiscovery_header">Informacje o normach</string>
    <string name="initstandardsdiscovery_description">Wybierz rodzaj norm, o których chcesz się więcej dowiedzieć</string>

    <string name="item_standard_placelabel">Miejsce</string>
    <string name="item_standard_threatthresholdlabel">Norma przekroczona</string>
    <string name="item_standard_riskthresholdlabel">Próg zagrożenia</string>
    <string name="item_standard_aceeptedvaluethreshold">Akceptowalna wartość</string>
    <string name="item_standard_classificationlabel">Klasyfikacja</string>
    <string name="help_header">Informacje o aplikacji</string>
    <string name="probedetails_rating">Twoja ocena</string>
    <string name="rating_1">1</string>
    <string name="rating_2">2</string>
    <string name="rating_3">3</string>
    <string name="rating_4">4</string>
    <string name="rating_5">5</string>
    <string name="apptour_header">Witaj w aplikacji pomiary hałasu!</string>
    <string name="apptour_description">Dzięki tej aplikacji możesz oszacować poziom hałasu w Twoim otoczeniu oraz
        wyznaczyć jego szkodliwość na podstawie norm prawnych lub zdrowotnych.
    </string>
    <string name="apptour_viewsdescription">Z poziomu menu głównego możesz przejść do jednego z 4 ekranów:</string>
    <string name="apptour_proberecordlabel">Rejestrowanie hałasu</string>
    <string name="apptour_probearchivelabel">Historia pomiarów</string>
    <string name="apptour_probestandardslabel">Standardy prawne i zdrowotne</string>
    <string name="apptour_apphelplabel">Pomoc nt. aplikacji</string>
    <string name="apptour_beginbutton">Zaczynajmy</string>
    <string name="apptour_ready">Gotowy?</string>

</resources>
