<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/backgroundColor"
        android:id="@+id/constraintlayout_loadingfragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="132dp" android:id="@+id/textView"
            app:layout_constraintHorizontal_bias="0.498" android:fontFamily="@font/open_sans_extrabold"
            android:textSize="38sp" android:gravity="center" android:textColor="@color/header" android:alpha="1"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:background="@drawable/input_bg"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="84dp" android:gravity="center" android:hint="@string/email_input"
            android:fontFamily="@font/open_sans_light" android:alpha="0.9" android:textColor="@color/userInput"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/input_bg"
            android:id="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" android:hint="@string/pwd_input" android:gravity="center"
            android:fontFamily="@font/open_sans_light" android:alpha="0.9" android:textColor="@color/userInput"/>
    <TextView
            android:text="@string/register_hyperlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_login_registerlink"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            android:gravity="center_horizontal" android:fontFamily="@font/open_sans_bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/hyperLink" android:alpha="1"/>
    <TextView
            android:text="@string/no_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textview_login_registerlink"
            app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintTop_toBottomOf="@+id/button_login_login"
            android:layout_marginTop="52dp"
            android:gravity="center" android:fontFamily="@font/open_sans" android:textColor="@color/normalText"
            android:alpha="1"/>
    <Button
            android:text="@string/login_button_label"
            android:background="@drawable/login_button_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_login_login"
            app:layout_constraintTop_toBottomOf="@+id/editText2" android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/open_sans_bold" android:paddingLeft="30dp" android:paddingRight="30dp"
            android:alpha="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>