<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/apptour_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="28dp"
            android:textColor="@color/header" android:textSize="20sp" android:fontFamily="@font/open_sans_bold"
            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.52"/>
    <TextView
            android:text="@string/apptour_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
            android:paddingHorizontal="30dp" android:fontFamily="@font/open_sans" android:textColor="@color/inputHint"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/apptour_viewsdescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/open_sans"
            android:textColor="@color/inputHint" android:paddingHorizontal="30dp" android:textAlignment="center"/>
    <ImageView
            tools:ignore="ContentDescription"
            android:layout_width="35dp"
            android:layout_height="35dp" app:srcCompat="@drawable/ic_microphone_silhouette_f44545_original"
            android:id="@+id/imageView6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView28"/>
    <TextView
            android:text="@string/apptour_proberecordlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView30"
            app:layout_constraintStart_toEndOf="@+id/imageView6" android:layout_marginStart="48dp"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6" app:layout_constraintVertical_bias="0.538"
            android:fontFamily="@font/open_sans" android:textColor="@color/inputHint" android:textStyle="bold"/>
    <ImageView
            tools:ignore="ContentDescription"
            android:layout_width="35dp"
            android:layout_height="35dp" app:srcCompat="@drawable/ic_archive_nav" android:id="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/apptour_probearchivelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView31"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7" android:layout_marginStart="60dp"
            android:textColor="@color/inputHint" android:textStyle="bold" android:fontFamily="@font/open_sans"
            app:layout_constraintVertical_bias="0.5"/>
    <ImageView
            tools:ignore="ContentDescription"
            android:layout_width="35dp"
            android:layout_height="35dp" app:srcCompat="@drawable/ic_norms_solid" android:id="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7" app:layout_constraintEnd_toEndOf="@+id/imageView7"
            android:layout_marginTop="12dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/apptour_probestandardslabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView33"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8" android:layout_marginStart="20dp"
            app:layout_constraintVertical_bias="0.50" android:fontFamily="@font/open_sans" android:textStyle="bold"
            android:textColor="@color/inputHint"/>
    <ImageView
            tools:ignore="ContentDescription"
            android:layout_width="35dp"
            android:layout_height="35dp" app:srcCompat="@drawable/ic_question_solid"
            android:id="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/imageView8" app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/apptour_apphelplabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView34"
            app:layout_constraintStart_toEndOf="@+id/imageView9" app:layout_constraintTop_toTopOf="@+id/imageView9"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9" android:layout_marginStart="60dp"
            app:layout_constraintVertical_bias="0.5" android:fontFamily="@font/open_sans" android:textStyle="bold"
            android:textColor="@color/inputHint"/>
    <Button
            android:text="@string/apptour_beginbutton"
            android:layout_width="150dp"
            android:layout_height="40dp" android:id="@+id/apptour_continuebutton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
            android:background="@drawable/login_button_bg" android:fontFamily="@font/open_sans_bold"/>
    <TextView
            android:text="@string/apptour_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView35"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="22sp" android:textColor="@color/inputHint" android:fontFamily="@font/open_sans"
            android:textStyle="bold" app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintBottom_toTopOf="@+id/apptour_continuebutton" android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>