<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/initstandardsdiscovery_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="90dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp"
            android:fontFamily="@font/open_sans_bold" android:textColor="@color/header" android:textAlignment="center"
            android:gravity="center"/>
    <TextView
            android:text="@string/initstandardsdiscovery_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp"
            android:fontFamily="@font/open_sans_semibold" android:textAlignment="center"
            android:textColor="@color/header" android:gravity="center"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checked="true"
            android:animateLayoutChanges="true"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="70dp"
            android:gravity="center" android:id="@+id/initstandardsdiscovery_radiogroup">
        <RadioButton
                android:text="@string/initstandardsdiscovery_law"
                android:layout_width="120dp"
                android:animateLayoutChanges="true"
                android:checked="true"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_background"
                android:layout_height="wrap_content" android:id="@+id/initstandardsdiscovery_law_radiobutton"
                android:layout_weight="1"
                android:textAlignment="center" android:fontFamily="@font/open_sans"
                android:textColor="@android:color/white" android:textStyle="bold" android:textAllCaps="true"
                android:padding="20dp" android:layout_margin="20dp"/>
        <RadioButton
                android:text="@string/initstandardsdiscovery_scientific"
                android:layout_width="120dp"
                android:animateLayoutChanges="true"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_background"
                android:layout_height="wrap_content" android:id="@+id/initstandardsdiscovery_scientific_radiobutton"
                android:layout_weight="1"
                android:textAlignment="center" android:fontFamily="@font/open_sans"
                android:textColor="@color/contraryBlue" android:textStyle="bold" android:textAllCaps="true"
                android:padding="20dp" android:layout_margin="20dp"/>
    </RadioGroup>
    <Button
            android:text="@string/continuebutton_text"
            android:background="@drawable/login_button_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_initstandardsview_continue"
            android:fontFamily="@font/open_sans_bold"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:alpha="1"
            app:layout_constraintTop_toBottomOf="@+id/initstandardsdiscovery_radiogroup"
            android:layout_marginTop="64dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>