<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity" android:background="@color/backgroundColor">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="72dp" android:id="@+id/textView"
            app:layout_constraintHorizontal_bias="0.496" android:fontFamily="@font/open_sans_extrabold"
            android:textSize="38sp" android:gravity="center" android:textColor="@color/header" android:alpha="1"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:background="@drawable/input_bg"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="84dp" android:gravity="center" android:hint="@string/email_input"
            android:fontFamily="@font/open_sans_light" android:alpha="0.9" android:textColor="@color/userInput"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/input_bg"
            android:id="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" android:hint="@string/pwd_input" android:gravity="center"
            android:fontFamily="@font/open_sans_light" android:alpha="0.9" android:textColor="@color/userInput"/>
    <Button
            android:text="@string/create_account_button_label"
            android:background="@drawable/login_button_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_login_login"
            app:layout_constraintTop_toBottomOf="@+id/editText2" android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/open_sans_bold" android:paddingLeft="30dp" android:paddingRight="30dp"
            android:alpha="1"
    />
    <Button
            android:layout_width="24dp"
            android:layout_height="30dp"
            android:id="@+id/button_register_back" android:background="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" android:layout_marginStart="24dp"
            style="?android:attr/borderlessButtonStyle"
    />

</androidx.constraintlayout.widget.ConstraintLayout>